--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="pa"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -60,7 +61,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progress" />
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/repoList"
             android:layout_width="0dp"
             android:layout_height="0dp"
