--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -35,6 +35,8 @@
             android:layout_marginLeft="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
+            android:textSize="20dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/adImage"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="This is ad title" />
@@ -54,13 +56,12 @@
             app:layout_constraintStart_toEndOf="@id/categoryLabel"
             tools:text="category name"/>
         <TextView
-            android:id="@+id/distanceText"
+            android:id="@+id/offerCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@id/adImage"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/categoryLabel"
+            app:layout_constraintTop_toTopOf="@id/myOfferCTA"
             tools:text="2 KM away"/>
 
         <TextView
